--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Prerequisites
 *.d
 
+*.json
+*.exe
 
 # Object files
 *.o
@@ -53,3 +55,5 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+build/*
